assets/scss/components.scss
/* ... */
// //////////////////////////////////////////////////////////////// Project Info
#section-project-info {
  margin-bottom: 4.3rem !important;

  .logo {
    max-height: 6rem;
    margin-bottom: 1.5rem;
  }

  h1.name {
    @include fontSize_ExtraExtraLarge;
    font-family: $font_Primary;
    font-weight: $fontWeight_SemiBold !important;
  }

  h2.company {
    @include fontSize_ExtraLarge;
    @include leading_Regular;
    font-weight: $fontWeight_SemiBold !important;
    color: $darkGrey;
    opacity: 1;
    margin-bottom: 1.9rem;
  }

  .description {
    @include fontSize_Medium;
    @include leading_Medium;
    color: $darkGrey;
    margin-bottom: 2.125rem !important;
  }

  .ctas {
    position: relative;
    z-index: 3;

    .primary-cta {
      @include whiteBorderBack;
      @include oceanBlueGradient;
      @include fontSize_Small;
      font-family: $font_Secondary;
      font-weight: $fontWeight_Regular;
      box-shadow: none;
      position: relative;
      padding: 0.35rem 1.25rem 0.275rem;
      margin-left: 12px;

      &:before,
      &:after {
        content: '';
        position: absolute;
        display: block;
        width: 100%;
        height: 100%;
      }

      &:before {
        @include whiteBorderBack;
        background: $cadmiumBlue;
        top: -7px;
        left: -6px;
        z-index: -1;
      }
      &:after {
        border: 2px solid $caribbeanBlue;
        top: -13px;
        left: -11px;
        z-index: -2;
      }

      span {
        position: relative;

        &[data-tooltip] {
          &::after {
            top: -1.5rem;
          }
        }
      }
    }

    .secondary-cta {
      display: none;
    }
  }
}

// //////////////////////////////////////////////////////////////////// Key Info
// -----------------------------------------------------------------------------

#section-key-info {
  h3.heading {
    font-size: $fontSize_ExtraLarge !important;
    font-family: $font_Primary;
    font-weight: $fontWeight_SemiBold;
  }

  .values {
    .name {
      @include fontSize_Regular;
      font-weight: $fontWeight_Medium;
    }

    .links {
      a {
        @include fontSize_Medium;
        font-weight: $fontWeight_Regular;
        position: relative;

        &[data-tooltip] {
          &::after {
            top: -1.25rem;
          }
        }
      }
    }
  }
}

// ///////////////////////////////////////////////////////////////////// Filters
// -----------------------------------------------------------------------------
#section-filters {
  h3.heading {
    font-size: $fontSize_Regular !important;
    font-family: $font_Primary;
    font-weight: $fontWeight_Medium;
  }
}

// /////////////////////////////////////////////////////////////////////// Video
// -----------------------------------------------------------------------------
#section-video {
  width: 500px;
  margin-top: 2.75rem;
  margin-left: -1.375rem;

  .video-wrapper {
    border-radius: 5px;
    overflow: hidden;
  }
}

// ///////////////////////////////////////////////////////////// Statistic Cards
// -----------------------------------------------------------------------------
#section-statistics {
  position: relative;
  top: 50%;
  transform: translateY(-50%);
  margin-bottom: 0 !important;
  flex-direction: column;
  flex-wrap: nowrap;
  row-gap: 20px;

  .card {
    @include oceanBorderGradient;
    width: 360px;
    margin: 0;

    .statistic {
      @include fontSize_Larger;
      font-family: $font_Primary;
      font-weight: $fontWeight_SemiBold;
      margin-bottom: 0;
    }

    .title {
      @include fontSize_Regular;
      font-family: $font_Primary;
      font-weight: $fontWeight_SemiBold;
    }

    .description {
      @include fontSize_Small;
      font-family: $font_Secondary;
      color: $tundora;
    }

    .cta {
      @include oceanBlueGradient;
      @include whiteBorderBack;
      @include fontSize_Small;
      font-family: $font_Secondary;
      font-weight: $fontWeight_Regular;
      color: $white;
      position: absolute;
      bottom: -20px;
      padding: 6px 29px;
      margin: 0;
    }

    &.big-number {
      padding: 30px 20px;
      flex-direction: row;
      column-gap: 14px;

      .description {
        text-align: left;
        @include leading_Small;
      }
    }

    &.case-study {
      position: relative;
      padding: 11px 20px 30px;

      .title {
        margin-bottom: 5px;
      }

      .description {
        @include leading_Regular;
      }
    }
  }
}

// ///////////////////////////////////////////////////////////////////// Filters
#section-filters {
  .chiclet {
    @include lightBlueGradient;
    @include whiteBorderBack;

    &:hover,
    &.active-button {
      @include oceanBlueGradient;
      color: $blackSapphire;
    }
  }
}

// ///////////////////////////////////////////////////////////////////// Filters
[data-tooltip] {
  &::before {
    content: none;
  }

  &::after {
    background: $white !important;
    color: $tooltipBlue !important;
    box-shadow: 0px 3px 6px 0px rgba($tooltipShadow, 0.31);
    padding: 0.25rem 0.5rem;
  }
}

